# pokemon-pack-picker

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: design.md  image-recognition-setup.md
src/: main.rs  models.rs  odds.rs  pack_gen.rs  recognition.rs  selection.rs  state.rs
static/css/: style.css
static/docs/: image-recognition-setup.html
tools/: run-recognition-api.sh
tools/trading-card-scanner-api/: README.md  server.py
