[package]
name = "pokemon-pack-picker"
version = "0.1.0"
edition = "2024"
description = "Self-hosted Pokemon TCG pack picker: build packs from your piles with official-style odds and A/B halving instructions."
authors = ["Elijah Fry"]
license = "MIT"
repository = "https://github.com/elijahfry/pokemon-pack-picker"
readme = "README.md"

[dependencies]
axum = { version = "0.7", features = ["macros", "form", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs"] }
